[package]
name = "http-fetch-with-diff-content-type"
version = "0.2.0"
authors = ["EDJX INC <edjx@edjx.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
edjx = "0.2.0"
http = "0.2.4"
bytes = "1"
serde = {version = "^1.0.8" }
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
serde_urlencoded = "0.7.0"